--- a/css/style.css
+++ b/css/style.css
@@ -15,9 +15,9 @@
 
   --clr-light: #fff;
   --clr-dark: #303030;
-  --clr-accent: #FAD900;
-  --clr-extra: #058465;
-  --clr-hamburger: #172E59;
+  --clr-accent: #45e487;
+  --clr-extra: #d3a305;
+  --clr-hamburger: #0c407c;
 
   --fs-h1: 3.5rem;
   --fs-h2: 3.25rem;
@@ -47,22 +47,49 @@ body{
     margin-right: auto;
     justify-content: center;
 }
-/*Intro*/
-.intro_log_in{
-  position: relative;
-  float: right;
+
+.nav_list{
+  display: block;
+  text-align: right;
   margin: 2em;
+  font-size: var(--fs-body);
+  font-family: var(--ff-secondary);
 }
+
+.nav_item{
+  display: inline;
+  margin: 0.5em;
+  align-content: right;
+}
+
+.nav_link {
+  color: inherit;
+  text-decoration: none;
+}
+
+.nav_link:hover{
+  color: var(--clr-extra);
+}
+
+/*Intro*/
+
 .logo{
   display:flex;
   margin-left: auto;
   margin-right: auto;
   justify-content: center;
 }
-.intro_title , .intro_subtitle{
+.intro_title {
   display: flex;
-  margin-top:2em;
-  margin-bottom:2em;
+  margin-top:1em;
+  margin-bottom:0.5em;
+  justify-content: center;
+  font-family: var(--ff-primary);
+}
+
+.intro_subtitle{
+  display: flex;
+  margin-bottom:1em;
   justify-content: center;
   font-family: var(--ff-primary);
 }
@@ -71,6 +98,8 @@ body{
   text-align: center;
   margin-bottom: 2em;
   font-family: var(--ff-secondary);
+  font-size: var(--fs-body);
+  letter-spacing: 0.1em;
 }
 
 
@@ -139,13 +168,111 @@ body{
 }
 .partners_title{
   font-family: var(--ff-secondary);
+  font-size: var(--fs-h4);
+  color: var(--clr-accent);
 }
 .partners_list li{
   margin-top: 0.5em;
   margin-bottom: 0.5em;
+  font-size: var(--fs-h5);
+}
+.partners_description{
+  margin-top: 1em;
+  font-family: var(--ff-secondary);
+  font-size: var(--fs-body);
+  letter-spacing: 0.1em;
+}
+.partners_description strong{
+  color: var(--clr-extra);
 }
 
-/*Footer*/
+/* Service */
+.service{
+  text-align: center;
+  justify-content: center;
+  list-style: none;
+  max-width: 800px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.service_subtitle, .service_description, .service_price{
+  margin-top: 1em;
+  margin-bottom: 0.5em;
+  
+}
+
+.service_subtitle, .service_price{
+  font-family: var(--ff-primary);
+}
+
+.service_description{
+  font-family: var(--ff-secondary);
+  
+}
+
+/*Contact*/
+
+.contact_titile{
+  text-align: center;
+  font-family: var(--ff-secondary)
+}
+
+.form{
+  font-family: var(--ff-primary);
+  box-sizing: border-box;
+  
+}
+label{
+  text-align: center;
+  padding:0.5em;
+  display:block;
+
+}
+input[type=text], select, textarea {
+  
+  
+  width: 30%;
+  padding: 12px;
+  border: 1px solid var(--clr-accent);
+  color: var(--clr-dark);
+  margin-top: 6px;
+  margin-bottom: 16px;
+  margin-left: auto;
+  margin-right: auto;
+  display:block;
+}
+
+input[type=submit] {
+  background-color: var(--clr-extra);
+  color: var(--clr-dark);
+  padding: 12px 20px;
+  border: none;
+  cursor: pointer;
+  margin-left: auto;
+  margin-right: auto;
+  display:block;
+}
+
+input[type=submit]:hover {
+  background-color: var(--clr-accent);
+}
+
+/* Style the container/contact section */
+.container {
+  border-radius: 5px;
+  background-color: var(--clr-dark);
+  padding: 10px;
+}
+
+/* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+  .column, input[type=submit] {
+    width: 100%;
+    margin-top: 0;
+  }
+}
+/* Footer */
 
 .footer {
   margin-top: 2em;
@@ -158,9 +285,10 @@ body{
   list-style: none;
 }
 
-.footer_email:hover,
+
 .footer_social_list_link:hover {
     opacity: 0.5;
+    color: var(--clr-accent);
 }
 
 .footer_social_list{
@@ -178,4 +306,12 @@ body{
 .footer_social_list_link {
   padding: .5em;
   font-size: var(--fs-h2);
+}
+
+.footer_copyright, .footer_created_by{
+  font-size: var(--fs-body);
+}
+
+.footer_email:hover,.created:hover{
+  color:var(--clr-accent);
 }
