--- a/css/style.css
+++ b/css/style.css
@@ -272,6 +272,8 @@ input[type=submit]:hover {
     margin-top: 0;
   }
 }
+
+
 /* Footer */
 
 .footer {
@@ -279,6 +281,7 @@ input[type=submit]:hover {
   text-align: center;
   font-family: var(--ff-primary);
   font-size: var(--fs-h5);
+  color: var(--clr-extra);
 }
 
 .footer li{
